<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.ticketmaster</groupId>
  <artifactId>experiments4j</artifactId>
  <version>2.0.0-SNAPSHOT</version>
  <properties>

    <!-- project properties -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <min.branch.coverage>0.95</min.branch.coverage>
    <min.line.coverage>0.95</min.line.coverage>

    <!-- plugin versions -->
    <maven.compiler.version>3.14.0</maven.compiler.version>
    <jacoco.version>0.8.13</jacoco.version>

    <!-- test dependency versions -->
    <junit.version>4.11</junit.version>
    <mockito.version>1.9.5</mockito.version>
    <pitest.version>1.1.5</pitest.version>

    <!-- dependency versions -->
    <metrics.version>3.0.2</metrics.version>
    <javaslang.version>1.2.0</javaslang.version>
  </properties>
  <scm>
    <connection>scm:git:git://git.tm.tmcs/tap/experiments4j.git</connection>
    <developerConnection>scm:git:ssh://git@git.tm.tmcs/tap/experiments4j.git</developerConnection>
  </scm>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.11.0-M2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.11.0-M2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.18.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>default-report</id>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>default-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule implementation="org.jacoco.maven.RuleConfiguration">
                  <element>BUNDLE</element>
                  <limits>
                    <limit implementation="org.jacoco.report.check.Limit">
                      <counter>BRANCH</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>${min.branch.coverage}</minimum>
                    </limit>
                    <limit implementation="org.jacoco.report.check.Limit">
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>${min.line.coverage}</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <compilerArgs>
            <arg>-verbose</arg>
            <arg>-Xlint:all,-options,-path</arg>
          </compilerArgs>
          <encoding>${project.build.sourceEncoding}</encoding>
          <release>${java.version}</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <additionalparam>-Xdoclint:none</additionalparam>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.pitest</groupId>
        <artifactId>pitest-maven</artifactId>
        <version>${pitest.version}</version>
        <configuration>
          <targetClasses>
            <param>com.ticketmaster*</param>
          </targetClasses>
          <targetTests>
            <param>com.ticketmaster*</param>
          </targetTests>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>6.13.0</version>
      </plugin>
      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>6.13.0</version>
        <configuration>
          <exportDatatables>true</exportDatatables>
          <activeRecipes>
            <recipe>org.openrewrite.java.migrate.UpgradeToJava21</recipe>
          </activeRecipes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-migrate-java</artifactId>
            <version>3.13.0</version>
          </dependency>
        </dependencies>
      </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-release-plugin</artifactId>
      <version>2.4.1</version>
      <configuration>
        <tagNameFormat>v@{project.version}</tagNameFormat>
      </configuration>
    </plugin>

<!--    <plugin>-->
<!--      <groupId>org.codehaus.mojo</groupId>-->
<!--      <artifactId>findbugs-maven-plugin</artifactId>-->
<!--      <version>3.0.5</version>-->
<!--      <configuration>-->
<!--        <effort>Max</effort>-->
<!--        <threshold>Low</threshold>-->
<!--        &lt;!&ndash;-->
<!--        For a list of "Vistors" to omit or include:-->
<!--        http://findbugs.sourceforge.net/api/edu/umd/cs/findbugs/detect/package-summary.html-->
<!--        &ndash;&gt;-->
<!--        <omitVisitors>Naming</omitVisitors>-->
<!--      </configuration>-->
<!--      <executions>-->
<!--        &lt;!&ndash;-->
<!--           Ensures that FindBugs inspects source code when project is under test.-->
<!--           We could/should do this during compile but can make local development slower.-->
<!--       &ndash;&gt;-->
<!--        <execution>-->
<!--          <id>analyze-compile</id>-->
<!--          <phase>test</phase>-->
<!--          <goals>-->
<!--            <goal>check</goal>-->
<!--          </goals>-->
<!--        </execution>-->
<!--      </executions>-->
<!--    </plugin>-->

<!--    <plugin>-->
<!--      <groupId>org.apache.maven.plugins</groupId>-->
<!--      <artifactId>maven-checkstyle-plugin</artifactId>-->
<!--      <version>3.6.0</version>-->
<!--      <configuration>-->
<!--        <consoleOutput>true</consoleOutput>-->
<!--        <configLocation>${basedir}/checkstyle.xml</configLocation>-->
<!--        <failsOnError>true</failsOnError>-->
<!--      </configuration>-->
<!--      <executions>-->
<!--        <execution>-->
<!--          <id>checkstyle</id>-->
<!--          <phase>verify</phase>-->
<!--          <goals>-->
<!--            <goal>checkstyle</goal>-->
<!--          </goals>-->
<!--        </execution>-->
<!--      </executions>-->
<!--    </plugin>-->

      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>6.13.0</version>
        <configuration>
          <activeRecipes>
            <recipe>org.openrewrite.java.testing.junit5.JUnit5BestPractices</recipe>
          </activeRecipes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-testing-frameworks</artifactId>
            <version>3.12.0</version>
          </dependency>
        </dependencies>
      </plugin>
  </plugins>

</build>

  <distributionManagement>
    <repository>
      <id>releases</id>
      <name>TAP Release Repository</name>
      <url>http://maven.platform.tm.tmcs:8081/nexus/content/repositories/releases</url>
    </repository>
    <snapshotRepository>
      <id>snapshots</id>
      <name>TAP Snapshot Repository</name>
      <url>http://maven.platform.tm.tmcs:8081/nexus/content/repositories/snapshots</url>
    </snapshotRepository>
    <!--
    <site>
        <id>cis.platform.tm.tmcs</id>
        <url>file:/www/docs/jetson-tmss-api/</url>
    </site>
    -->
  </distributionManagement>
</project>
